--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-mx">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,47 +9,39 @@
 
 <body>
     <header>
-        <img src="assets/vector-alura.png" alt="logo 'a' de Alura">
+        <img src="assets/vector-alura.png" class="logo__alura" alt="logo de Alura Latam">
     </header>
-
-    <div class="contenedor">
-        <div class="contenedor__encriptador"> 
-            <textarea 
-                name="texto" 
-                class="texto" 
-                id="texto"
-                placeholder="Ingresa el texto aquí">
-            </textarea>
-        </div>
-        <div class="contenedor__reglas">
-            <img src="assets/vector-exclamacion.png" alt="signo de exclamacion">
-            <p>Utiliza solo letras minúsculas y sin acentos.</p>
-        </div>
-        <div class="contenedor__botones">
-            <button class="boton__encriptar" type="button" onclick="encriptar()">
-                Encriptar
-            </button>
-            <button class="boton__desencriptar" type="button" onclick="desencriptar()">
-                Desencriptar
-            </button>
-        </div>
-        <div class="contenedor__texto-encriptado"></div>
-        <img src="assets/muñeco.png" alt="Muñeco con lupa">
-        <div class="contenedor__texto-encriptado__mensaje">
-        <h2 id="titulo-mensaje"> Mensaje no encontrado </h2>
-        <p id="parrafo-mensaje">Escribe el texto que deseas encriptar o desencriptar</p>
-        <textarea name="mensaje" id="mensaje" class="mensaje"></textarea>
-        <button class="boton__copiar-mensaje-encripado" type="button" onclick="copiarMensaje()"> 
-            Copiar 
-        </button>
-        </div>
-    </div>
+    <main>
+        <section>
+                <textarea name="texto__encriptador" class="texto__encriptador" cols="30" rows="10" placeholder="Ingresa el texto aquí.">
+                </textarea>
+            <div class="reglas">
+                 <img src="assets/vector-exclamacion.png" alt="signo de exclamacion">
+                <p>OJO: Solo puedes utilizar letras minúsculas y sin acentos.</p>
+            </div>
+            <div class="botones">
+                <button class="boton__encriptar" type="button" onclick="encriptar()">
+                     Encriptar
+                 </button>
+                <button class="boton__desencriptar" type="button" onclick="desencriptar()">
+                     Desencriptar
+                </button>
+             </div>
+        </section>
+        <section>
+            <textarea name="mensaje__encriptado" class="mensaje__encriptado" cols="30" rows="10"></textarea>
+            <div> 
+                 <button class="boton__copiar-mensaje" type="button" onclick="copiarMensaje()"> 
+                     Copiar 
+                </button>
+            </div>
+        </section>
+    </main>
 
     <footer class="footer">
-        <p> Desarrollado por Ailssa Leyzaola, con Alura Latam
+        <p> Desarrollado por Ailssa Leyzaola Félix, con Alura Latam.
         </p>
     </footer>
-
 </body>
 
 <script src="app.js"> 
