Arreglos HTML y CSS, creacion funciones Encriptar y Desencriptar en JS

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
                 <p>OJO: Solo puedes utilizar letras minúsculas y sin acentos.</p>
             </div>
             <div class="botones">
-                <button class="boton__encriptar" type="button" onclick="encriptar()">
+                <button class="boton__encriptar" type="button" onclick="botonEncriptar()">
                      Encriptar
                  </button>
-                <button class="boton__desencriptar" type="button" onclick="desencriptar()">
+                <button class="boton__desencriptar" type="button" onclick="botonDesencriptar()">
                      Desencriptar
                 </button>
              </div>
         </section>
         <section>
-            <textarea name="mensaje__encriptado" class="mensaje__encriptado" cols="30" rows="10"></textarea>
+            <textarea name="mensaje__encriptador" class="mensaje__encriptador" cols="30" rows="10"></textarea>
             <div> 
                  <button class="boton__copiar-mensaje" type="button" onclick="copiarMensaje()"> 
                      Copiar 
