Arreglos a CSS, HTML, y JS

--- a/index.html
+++ b/index.html
@@ -28,13 +28,11 @@
                 </button>
              </div>
         </section>
-        <section>
+        <section class="mensaje">
             <textarea name="mensaje__encriptador" class="mensaje__encriptador" cols="30" rows="10"></textarea>
-            <div> 
-                 <button class="boton__copiar-mensaje" type="button" onclick="copiarMensaje()"> 
+            <button class="boton__copiar-mensaje" type="button" onclick="copiarMensaje()"> 
                      Copiar 
-                </button>
-            </div>
+            </button>
         </section>
     </main>
 
