--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
         <section class="mensaje">
             <div class="mensaje__anuncio">
-                <img src="/assets/muñeco.svg" alt="muñeco con lupa">
+                <img src="assets/muñeco.svg" alt="muñeco con lupa">
                 <p>Ningún mensaje fue encontrado</p>
                 <p>Ingresa el texto que desees encriptar o desencriptar.</p>
             </div>
